--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -90,18 +90,26 @@
                 @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
             </td>
             <td>
+                <a asp-controller="Partes" asp-action="Index" asp-route-id="@item.Id">
+                    <button class="btn btn-warning">
+                        Trabajos
+                    </button>
+                </a>
                 <a asp-action="Edit" asp-route-id="@item.Id">
-					<button class="btn btn-primary">Editar
-					</button>
-				</a>
-				<a asp-action="Details" asp-route-id="@item.Id">
-					<button class="btn btn-info">Detalles
-					</button>
-				</a>
-				<a asp-action="Delete" asp-route-id="@item.Id">
-					<button class="btn btn-danger">Eliminar
-					</button>
-				</a>
+                    <button class="btn btn-primary">
+                        Editar
+                    </button>
+                </a>
+                <a asp-action="Details" asp-route-id="@item.Id">
+                    <button class="btn btn-info">
+                        Detalles
+                    </button>
+                </a>
+                <a asp-action="Delete" asp-route-id="@item.Id">
+                    <button class="btn btn-danger">
+                        Eliminar
+                    </button>
+                </a>
             </td>
         </tr>
 }
