--- a/Honcizek/Views/Shared/Administrador.cshtml
+++ b/Honcizek/Views/Shared/Administrador.cshtml
@@ -59,9 +59,9 @@
             <section>
                 @RenderBody()
             </section>
-        <footer class="border-top footer text-muted">
+        <footer class="border-top footer text-muted ">
             <div class="container">
-                &copy; 2021 - Honcizek - Todos los derechos reservados
+                <span class="float-right">&copy; 2021 - Honcizek - Todos los derechos reservados</span>
             </div>
         </footer>
     </div>
