--- a/Honcizek/Views/Administrador/Tickets/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Edit.cshtml
@@ -3,68 +3,64 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
-<h1>Editar</h1>
-
-<h4>Tickets</h4>
+<div class="d-flex">
+    <div class="mr-auto p-2">
+        <h1>Editar</h1>
+        <h4>Tickets</h4>
+    </div>
+    <div class="align-self-end pr-3">
+        <a asp-controller="Partes" asp-action="Index" asp-route-id="@Model.Id">
+            <button class="btn btn-warning">Consultar partes de trabajo</button>
+        </a>
+    </div>
+</div>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="SuscripcionId" class="control-label"></label>
-                <select asp-for="SuscripcionId" class="form-control" asp-items="ViewBag.SuscripcionId"></select>
-                <span asp-validation-for="SuscripcionId" class="text-danger"></span>
+            <input type="hidden" asp-for="ClienteId" />
+            <input type="hidden" asp-for="AgenteId" />
+            <input type="hidden" asp-for="FechaRegistro" value="@ViewData["hoy"]" />
+            <input type="hidden" asp-for="HoraRegistro" value="@ViewData["hora"]" />
+            <div class="row col-12">
+                <div class="form-group col-4">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="SuscripcionId" class="control-label">Suscripci&oacute;n</label>
+                    <select asp-for="SuscripcionId" class="form-control" asp-items="ViewBag.SuscripcionId"></select>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="ClienteId" class="control-label"></label>
-                <select asp-for="ClienteId" class="form-control" asp-items="ViewBag.ClienteId"></select>
-                <span asp-validation-for="ClienteId" class="text-danger"></span>
+
+            
+            <div class="row col-12">
+
+                <div class="form-group col-4">
+                    <label asp-for="Estado" class="control-label"></label>
+                    <select asp-for="Estado" class="form-control" asp-items="ViewBag.Estado"></select>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="FechaFinalizacion" class="control-label"></label>
+                    <input type="date" asp-for="FechaFinalizacion" class="form-control" />
+                    <span asp-validation-for="FechaFinalizacion" class="text-danger"></span>
+                </div>
+                <div class="form-group col-4">
+                    <label asp-for="HoraFinalizacion" class="control-label"></label>
+                    <input type="time" asp-for="HoraFinalizacion" class="form-control" />
+                    <span asp-validation-for="HoraFinalizacion" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="AgenteId" class="control-label"></label>
-                <select asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
-                <span asp-validation-for="AgenteId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Descripcion" class="control-label"></label>
-                <input asp-for="Descripcion" class="form-control" />
+            <div class="form-group col-4">
+                <label asp-for="Descripcion" class="control-label">Descripci&oacute;n</label>
+                <textarea asp-for="Descripcion" class="form-control"></textarea>
                 <span asp-validation-for="Descripcion" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="FechaRegistro" class="control-label"></label>
-                <input asp-for="FechaRegistro" class="form-control" />
-                <span asp-validation-for="FechaRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HoraRegistro" class="control-label"></label>
-                <input asp-for="HoraRegistro" class="form-control" />
-                <span asp-validation-for="HoraRegistro" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Estado" class="control-label"></label>
-                <input asp-for="Estado" class="form-control" />
-                <span asp-validation-for="Estado" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FechaFinalizacion" class="control-label"></label>
-                <input asp-for="FechaFinalizacion" class="form-control" />
-                <span asp-validation-for="FechaFinalizacion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="HoraFinalizacion" class="control-label"></label>
-                <input asp-for="HoraFinalizacion" class="form-control" />
-                <span asp-validation-for="HoraFinalizacion" class="text-danger"></span>
-            </div>
-             <div class="form-group pl-3">
-                <input type="submit" value="Guardar" class="btn btn-info" />
+            <div class="form-group pl-3">
+                <input type="submit" value="Crear" class="btn btn-info" />
             </div>
         </form>
         <div class="pt-3 pl-3">
