--- a/Honcizek/Views/Administrador/Trabajos/Create.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Create.cshtml
@@ -15,7 +15,7 @@
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <input type="hidden" asp-for="ProyectoId" value="@ViewData["proyecto_id"]" />
                 <div class="form-group">
-                    <label asp-for="AgenteId" class="control-label">Pais</label>
+                    <label asp-for="AgenteId" class="control-label">Programador</label>
                     <select data-live-search="true" asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
                 </div>
                 <div class="form-group">
