--- a/Honcizek/Views/Administrador/Trabajos/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Trabajos/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="ProyectoId" />
             <div class="form-group">
-                <label asp-for="AgenteId" class="control-label">Pais</label>
+                <label asp-for="AgenteId" class="control-label">Programador</label>
                 <select data-live-search="true" asp-for="AgenteId" class="form-control" asp-items="ViewBag.AgenteId"></select>
             </div>
             <div class="form-group">
