--- a/Honcizek/Views/Administrador/Clientes/Index.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Index.cshtml
@@ -32,16 +32,10 @@
                 @Html.DisplayNameFor(model => model.Nombre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Apellidos)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Tipo)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RazonSocial)
+                @Html.DisplayNameFor(model => model.FechaRegistro)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Telefono)
@@ -60,19 +54,13 @@
         {
             <tr>
                 <td>
-                    @Html.DisplayFor(modelItem => item.Nombre)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Apellidos)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Fecha)
+                    @Html.DisplayFor(modelItem => item.FullName)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Tipo)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.RazonSocial)
+                    @Html.DisplayFor(modelItem => item.Fecha)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Telefono)
