--- a/Honcizek/Views/Administrador/Clientes/Edit.cshtml
+++ b/Honcizek/Views/Administrador/Clientes/Edit.cshtml
@@ -13,6 +13,7 @@
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="Clave" />
             <div class="row col-12">
                 <div class="form-group col-4">
                     <label asp-for="Login" class="control-label"></label>
@@ -22,17 +23,8 @@
                         <span class="text-danger" id="login-error">Parece que ese nombre de usuario ya existe..</span>
                     }
                 </div>
-                <div class="form-group col-4">
-                    <label asp-for="Clave" class="control-label">Contrase&ntilde;a s&oacute;lo si cambia</label>
-                    <input type="password" asp-for="Clave" class="form-control" />
-                    <span asp-validation-for="Clave" class="text-danger"></span>
-                </div>
             </div>
             <div class="row col-12">
-                <div class="form-group col-4">
-                    <label asp-for="PaisId" class="control-label">Pais</label>
-                    <select asp-for="PaisId" class="form-control" asp-items="ViewBag.PaisId"></select>
-                </div>
                 <div class="form-group col-4">
                     <label asp-for="ProvinciaId" class="control-label">Provincia</label>
                     <select asp-for="ProvinciaId" class="form-control" asp-items="ViewBag.ProvinciaId"></select>
