--- a/Honcizek/wwwroot/css/site.css
+++ b/Honcizek/wwwroot/css/site.css
@@ -112,6 +112,10 @@ table thead th {
     font-weight: unset;
 }
 
+table thead tr th:last-child {
+    width: 25%;
+}
+
 table tbody tr {
     font-family: OpenSans-Regular;
     font-size: 15px;
@@ -138,6 +142,7 @@ table tbody tr td {
 table tbody tr td:last-child {
     padding-top: 1vh;
     padding-bottom: 1vh;
+    float: right;
 }
 
 table tbody tr td:last-child button{
