--- a/Honcizek/Views/Administrador/Suscripciones/Create.cshtml
+++ b/Honcizek/Views/Administrador/Suscripciones/Create.cshtml
@@ -23,7 +23,7 @@
                 </div>
                 <div class="form-group col-4 proyecto">
                     <label asp-for="ProyectoId" class="control-label">Proyecto</label>
-                    <select asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
+                    <select disabled asp-for="ProyectoId" class="form-control" asp-items="ViewBag.ProyectoId"></select>
                 </div>
             </div>
             <div class="row col-12">
