--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -4,6 +4,7 @@
 @{
 }
 <h1>Bienvenido al escritorio</h1>
+<p>@ViewData["prueba"]</p>
 <form asp-controller="Login" asp-action="Logout" method="post">
     <button class="btn btn-danger">Cerrar sesión</button>
 </form>
