--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -5,113 +5,140 @@
 }
 
 <h1>Listado de Tickets</h1>
-
-<p>
-    <a asp-action="Create">
-        <button class="btn btn-info">Crear nuevo
-		</button>
-    </a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Nombre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoraRegistro)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaFinalizacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.HoraFinalizacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Agente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cliente)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Suscripcion)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @if (item.FechaRegistro != null)
-                {
-                    @Html.DisplayFor(modelItem => item.FRegistro)
-                }
-                else
-                {
-                    <span>Sin especificar</span>
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoraRegistro)
-            </td>
-            <td>
-                @if (item.FechaFinalizacion != null)
-                {
-                    @Html.DisplayFor(modelItem => item.FFin)
-                }
-                else
-                {
-                    <span>Sin especificar</span>
-                }
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.HoraFinalizacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Agente.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cliente.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
-            </td>
-            <td>
-                <a asp-controller="Partes" asp-action="Index" asp-route-id="@item.Id">
-                    <button class="btn btn-warning">
-                        Trabajos
-                    </button>
-                </a>
-                <a asp-action="Edit" asp-route-id="@item.Id">
-                    <button class="btn btn-primary">
-                        Editar
-                    </button>
-                </a>
-                <a asp-action="Details" asp-route-id="@item.Id">
-                    <button class="btn btn-info">
-                        Detalles
-                    </button>
-                </a>
-                <a asp-action="Delete" asp-route-id="@item.Id">
-                    <button class="btn btn-danger">
-                        Eliminar
-                    </button>
-                </a>
-            </td>
-        </tr>
+@if (!(bool)ViewData["error"] && !(bool)ViewData["forbidden"])
+{
+    <div>
+    <p class="float-left">
+        <a asp-action="Create">
+            <button class="btn btn-info">
+                Crear nuevo
+            </button>
+        </a>
+    </p>
+    <p class="float-right">
+        <a asp-action="@((bool)ViewData["general"] ? "IndexUsuario":"Index")" asp-route-id="@((bool)ViewData["general"] ? ViewData["usuario_id"]:"")">
+            <button class="btn btn-@((bool)ViewData["general"] ? "primary":"warning")">
+                @((bool)ViewData["general"] ? "Ver mis tickets":"Ver todos los tickets")
+            </button>
+        </a>
+    </p>
+    </div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Nombre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Estado)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FechaRegistro)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.HoraRegistro)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FechaFinalizacion)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.HoraFinalizacion)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Agente)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Cliente)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Suscripcion)
+                </th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Nombre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Estado)
+                    </td>
+                    <td>
+                        @if (item.FechaRegistro != null)
+                        {
+                            @Html.DisplayFor(modelItem => item.FRegistro)
+                        }
+                        else
+                        {
+                            <span>Sin especificar</span>
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.HoraRegistro)
+                    </td>
+                    <td>
+                        @if (item.FechaFinalizacion != null)
+                        {
+                            @Html.DisplayFor(modelItem => item.FFin)
+                        }
+                        else
+                        {
+                            <span>Sin especificar</span>
+                        }
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.HoraFinalizacion)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Agente.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Cliente.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Suscripcion.Nombre)
+                    </td>
+                    <td>
+                        <a asp-controller="Partes" asp-action="Index" asp-route-id="@item.Id">
+                            <button class="btn btn-warning">
+                                Trabajos
+                            </button>
+                        </a>
+                        <a asp-action="Edit" asp-route-id="@item.Id">
+                            <button class="btn btn-primary">
+                                Editar
+                            </button>
+                        </a>
+                        <a asp-action="Details" asp-route-id="@item.Id">
+                            <button class="btn btn-info">
+                                Detalles
+                            </button>
+                        </a>
+                        <a asp-action="Delete" asp-route-id="@item.Id">
+                            <button class="btn btn-danger">
+                                Eliminar
+                            </button>
+                        </a>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 }
-    </tbody>
-</table>
+@if ((bool)ViewData["error"])
+{
+    <h4>Est&aacute;s intentando ver los tickets de un usuario que no existe.</h4>
+    <hr />
+    <h5>Prueba a ver el <a class="honci-link" asp-controller="Tickets" asp-action="Index">Listado completo de tickets</a> e int&eacute;ntalo de nuevo</h5>
+    <hr />
+    <h5>Tambi&eacute;n puedes probar a ver <a class="honci-link" asp-controller="Tickets" asp-action="IndexUsuario" asp-route-id="@ViewData["usuario_id"]">Listado de tus tickets</a> e int&eacute;ntalo de nuevo</h5>
+}
+@if ((bool)ViewData["forbidden"])
+{
+    <h4>Est&aacute;s intentando ver los tickets de otro programador...</h4>
+    <hr />
+    <h5>Prueba a ver el <a class="honci-link" asp-controller="Tickets" asp-action="Index">Listado completo de tickets</a> e int&eacute;ntalo de nuevo</h5>
+}
