Todas las tablas en admin adaptadas para ver solo registros del usuario

--- a/Honcizek/Views/Administrador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Listado de Proyectos</h1>
+<h1>Listado de @(!(bool)ViewData["general"]?"mis":"") proyectos</h1>
 
 @if (!(bool)ViewData["error"] && !(bool)ViewData["forbidden"])
 {
