--- a/Honcizek/Views/Administrador/Tickets/Index.cshtml
+++ b/Honcizek/Views/Administrador/Tickets/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Listado de Tickets</h1>
+<h1>Listado de @(!(bool)ViewData["general"]?"mis":"") tickets</h1>
 @if (!(bool)ViewData["error"] && !(bool)ViewData["forbidden"])
 {
     <div>
