--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -2,9 +2,30 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
+    bool proyectosPersonalizado = (int)ViewData["proyectos"] > 0;
+    bool ticketsPersonalizado = (int)ViewData["tickets"] > 0;
 }
-<h1>Bienvenido al escritorio</h1>
-<p>@ViewData["prueba"]</p>
-<form asp-controller="Login" asp-action="Logout" method="post">
+<h1>Bienvenido al escritorio, @ViewData["nombre"]</h1>
+<div class="pt-4">
+    <h4>
+        @((int)ViewData["proyectos"] > 0 ? "Participas en" : "No participas en ningún ")
+        @ViewData["proyectos"]
+        <a class="honci-link" asp-controller="Proyectos"
+           asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")" asp-route-id="@(proyectosPersonalizado ? ViewData["usuario_id"]:"")">
+            @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
+        </a>
+    </h4>
+    <hr />
+    <h4>
+        @((int)ViewData["tickets"] > 0 ? "Tienes " : "No tienes ningún ")
+        @((int)ViewData["tickets"] > 0 ? ViewData["tickets"]:"")
+        <a class="honci-link" asp-controller="Tickets"
+           asp-action="@(ticketsPersonalizado ? "IndexUsuario":"Index")" asp-route-id="@(ticketsPersonalizado ? ViewData["usuario_id"]:"")">
+            @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
+        </a>
+    </h4>
+</div>
+
+<form class="pt-4" asp-controller="Login" asp-action="Logout" method="post">
     <button class="btn btn-danger">Cerrar sesión</button>
 </form>
