--- a/Honcizek/Views/Administrador/Proyectos/Index.cshtml
+++ b/Honcizek/Views/Administrador/Proyectos/Index.cshtml
@@ -94,7 +94,7 @@
                         }
                         else
                         {
-                            <span>Sin especificar</span>
+                            <span>Sin finalizar</span>
                         }
                     </td>
                     <td>
