--- a/Honcizek/Views/Shared/Programador.cshtml
+++ b/Honcizek/Views/Shared/Programador.cshtml
@@ -21,7 +21,7 @@
     <div class="d-flex main">
         <aside class="d-flex flex-column">
 
-            <a asp-controller="Proyectos" asp-action="Index">
+            <a asp-controller="ProyectosP" asp-action="Index">
                 <div class="menu-option Proyectos">
                     <span>Proyectos</span>
                 </div>
