--- a/otros/generador/Admin/Edit.cshtml
+++ b/otros/generador/Admin/Edit.cshtml
@@ -111,11 +111,11 @@
             }
         }
     }
-             <div class="form-group pt-2">
+             <div class="form-group pl-3">
                 <input type="submit" value="Guardar" class="btn btn-info" />
             </div>
         </form>
-        <div class="pt-3">
+        <div class="pt-3 pl-3">
             <a asp-action="Index">
                 <button class="btn btn-primary">Volver al listado</button>
             </a>
