--- a/Honcizek/Views/Programador/Escritorio.cshtml
+++ b/Honcizek/Views/Programador/Escritorio.cshtml
@@ -10,7 +10,7 @@
     <h4>
         @((int)ViewData["proyectos"] > 0 ? "Participas en" : "No participas en ningún ")
         @ViewData["proyectos"]
-        <a class="honci-link" asp-controller="Proyectos"
+        <a class="honci-link" asp-controller="ProyectosP"
            asp-action="@(proyectosPersonalizado ? "IndexUsuario":"Index")" asp-route-id="@(proyectosPersonalizado ? ViewData["usuario_id"]:"")">
             @((int)ViewData["proyectos"] > 1 ? "proyectos":"proyecto")
         </a>
@@ -19,7 +19,7 @@
     <h4>
         @((int)ViewData["tickets"] > 0 ? "Tienes " : "No tienes ningún ")
         @((int)ViewData["tickets"] > 0 ? ViewData["tickets"]:"")
-        <a class="honci-link" asp-controller="Tickets"
+        <a class="honci-link" asp-controller="TicketsP"
            asp-action="@(ticketsPersonalizado ? "IndexUsuario":"Index")" asp-route-id="@(ticketsPersonalizado ? ViewData["usuario_id"]:"")">
             @((int)ViewData["tickets"] > 1 ? "tickets pendientes" : "ticket pendiente")
         </a>
