--- a/Honcizek/Views/Programador/Proyectos/Delete.cshtml
+++ b/Honcizek/Views/Programador/Proyectos/Delete.cshtml
@@ -1,11 +1,12 @@
 @model Honcizek.DAL.Models.Proyectos
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Detalles</h1>
+<h1>Delete</h1>
 
+<h3>Seguro que quieres eliminarlo?</h3>
 <div>
     <h4>Proyectos</h4>
     <hr />
@@ -38,46 +39,25 @@
             @Html.DisplayNameFor(model => model.FechaRegistro)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.FRegistro)
+            @Html.DisplayFor(model => model.FechaRegistro)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaInicio)
         </dt>
-        <dd class="col-sm-4">
-            @if (@Model.FechaFinPrevista != null)
-            {
-                @Html.DisplayFor(model=> model.Finicio)
-            }
-            else
-            {
-                <span>Sin especificar</span>
-            }
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.FechaInicio)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinPrevista)
         </dt>
-        <dd class="col-sm-4">
-            @if (@Model.FechaFinPrevista != null)
-            {
-                @Html.DisplayFor(model => model.FFinPrevista)
-            }
-            else
-            {
-                <span>Sin especificar</span>
-            }
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.FechaFinPrevista)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.FechaFinReal)
         </dt>
-        <dd class="col-sm-4">
-            @if (@Model.FechaFinReal != null)
-            {
-                @Html.DisplayFor(model=> model.FFin)
-            }
-            else
-            {
-                <span>Sin especificar</span>
-            }
+        <dd class = "col-sm-4">
+            @Html.DisplayFor(model => model.FechaFinReal)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.HorasInternasPrevistas)
@@ -101,17 +81,15 @@
             @Html.DisplayNameFor(model => model.Cliente)
         </dt>
         <dd class = "col-sm-4">
-            @Html.DisplayFor(model => model.Cliente.FullName)
-        </dd>
+            @Html.DisplayFor(model => model.Cliente.Clave)
+        </dd class>
     </dl>
-</div>
-<div>
-    <div class="pb-3">
-    <a asp-action="Edit" asp-route-id="@Model.Id">
-      <button class="btn btn-info">Editar</button>
-    </a>
-	</div>
+    
+    <form class="pb-3" asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Borrar" class="btn btn-danger" />
+    </form>
 	<a asp-action="Index">
-		<button class="btn btn-primary">Volver al listado</button>
-	</a>
+			<button class="btn btn-primary">Volver al listado</button>
+		</a>
 </div>
