--- a/otros/generador/Admin/Delete.cshtml
+++ b/otros/generador/Admin/Delete.cshtml
@@ -32,14 +32,14 @@
 @:<html>
 @:<head>
     @:<meta name="viewport" content="width=device-width" />
-    @:<title>@Model.ViewName</title>
+    @:<title>Eliminar</title>
 @:</head>
 @:<body>
 @:
         //    PushIndent("    ");
     }
 }
-<h3>Are you sure you want to delete this?</h3>
+<h3>Seguro que quieres eliminarlo?</h3>
 <div>
     <h4>@Model.ViewDataTypeShortName</h4>
     <hr />
