--- a/otros/generador/Admin/MvcControllerWithContext.cshtml
+++ b/otros/generador/Admin/MvcControllerWithContext.cshtml
@@ -8,6 +8,7 @@ using System.Threading.Tasks;
 using Microsoft.AspNetCore.Mvc;
 using Microsoft.AspNetCore.Mvc.Rendering;
 using Microsoft.EntityFrameworkCore;
+using Microsoft.AspNetCore.Authorization;
 @{
     foreach (var namespaceName in Model.RequiredNamespaces)
     {
@@ -65,6 +66,7 @@ namespace @Model.ControllerNamespace
     @:@string.Format("[Area(\"{0}\")]", Model.AreaName)
     }
 }
+	[Authorize(Roles = "Administrador")]
 	[Route("Administrador/[controller]/[action]")]
     public class @Model.ControllerName : Controller
     {
@@ -147,7 +149,7 @@ namespace @Model.ControllerNamespace
             @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
     }
 }
-            return View("Views/Administrador/@routePrefix/Index.cshtml",@Model.ModelVariable);
+            return View("Views/Administrador/@routePrefix/Create.cshtml",@Model.ModelVariable);
         }
 
         // GET: @routePrefix/Edit/5
@@ -210,7 +212,7 @@ namespace @Model.ControllerNamespace
             @:ViewData["@(property.ForeignKeyPropertyNames[0])"] = new SelectList(_context.@property.EntitySetName, "@property.PrimaryKeyNames[0]", "@property.DisplayPropertyName", @(Model.ModelVariable).@property.ForeignKeyPropertyNames[0]);
     }
 }
-            return View("Views/Administrador/@routePrefix/Index.cshtml",@Model.ModelVariable);
+            return View("Views/Administrador/@routePrefix/Edit.cshtml",@Model.ModelVariable);
         }
 
         // GET: @routePrefix/Delete/5
